--- a/index.html
+++ b/index.html
@@ -85,6 +85,8 @@
         </div>
       </div>
     </div>
+   <p>
+ <a href="https://github.com/whvtitiz/Weather-App-Project">Open-source code</a> by Whitney Wiles </p>
   </body>
 </html>
 
