Added the forecast CSS and HTML

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               <li>Humidity: <span id= "humidity"></span>%</li>
               <li>Wind: <span id= "wind"></span>km/h</li>
             </ul>
-            </div>
+          </div>
             <div
               class="btn-group"
               role="group"
@@ -83,6 +83,20 @@
               <button type="button" class="btn btn-outline-secondary">
                 Wind
               </button>
+          </div>
+          <div class="weather-forecast">
+            <div class="row">
+              <div class="col-2">
+                <div class="weather-forecast-date">
+                Thu
+                </div>
+                <img src="http://openweathermap.org/img/wn/50n@2x.png" alt="" width="36"/>
+                <div class="weather-forecast-date">
+                <span class= "weather-forecast-date-max"> 18° </span>
+                <span class= "weather-forecast-date-min">12°</span>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
