--- a/index.html
+++ b/index.html
@@ -84,19 +84,7 @@
                 Wind
               </button>
           </div>
-          <div class="weather-forecast">
-            <div class="row">
-              <div class="col-2">
-                <div class="weather-forecast-date">
-                Thu
-                </div>
-                <img src="http://openweathermap.org/img/wn/50n@2x.png" alt="" width="36"/>
-                <div class="weather-forecast-date">
-                <span class= "weather-forecast-date-max"> 18° </span>
-                <span class= "weather-forecast-date-min">12°</span>
-                </div>
-              </div>
-            </div>
+          <div class="weather-forecast" id="forecast"></div>
           </div>
         </div>
       </div>
