Removed Celsius + Fahrenheit conversion -- to Metric/Fahrenheit

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="clearfix weather-temperature">
               <img src="" alt="sunny" id="icon" class="float-left" />
               <div class="float-left">
-                <strong id="temperature"></strong><span class="units"><a href="#" id="celsius-link" class="active">°C</a> | <a href="#" id="fahrenheit-link">°F</a></span>
+                <strong id="temperature"></strong><span class="units">°F</span>
               </div>
             </div>
           </div>
@@ -66,7 +66,7 @@
             <ul>
               <li>Precipitation: 78%</li>
               <li>Humidity: <span id= "humidity"></span>%</li>
-              <li>Wind: <span id= "wind"></span>km/h</li>
+              <li>Wind: <span id= "wind"></span>mph</li>
             </ul>
           </div>
             <div
