Final Edits, mainly CSS and HTML

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                 autocomplete="off"
                 id="city-input"
                 class="form-control shadow-sm"
+                style="background-color: #b5b7b7;"
               />
             </div>
             <div class="col-3">
@@ -47,12 +48,12 @@
         <div class="overview">
         <h1 id="city"></h1>
         <ul>
-          <li>last updated: <span id="date"></span></li>
+          <li><span id="date"></span></li>
           <li id ="description"></li>
         </ul>
       </div>
         <div class="row">
-          <div class="col-9">
+          <div class="col-4">
             <div class="clearfix weather-temperature">
               <img src="" alt="sunny" id="icon" class="float-left" />
               <div class="float-left">
@@ -60,37 +61,23 @@
               </div>
             </div>
           </div>
-          <hr />
-          <br />
-          <div class="col-6">
+          <div class="col-9">
             <ul>
-              <li>Precipitation: 78%</li>
               <li>Humidity: <span id= "humidity"></span>%</li>
               <li>Wind: <span id= "wind"></span>mph</li>
             </ul>
           </div>
-            <div
-              class="btn-group"
-              role="group"
-              aria-label="Basic outlined example"
-            >
-              <button type="button" class="btn btn-outline-secondary">
-                Temperature
-              </button>
-              <button type="button" class="btn btn-outline-secondary">
-                Percipitation
-              </button>
-              <button type="button" class="btn btn-outline-secondary">
-                Wind
-              </button>
-          </div>
+          <br />
+          <br />
+          <hr />
           <div class="weather-forecast" id="forecast"></div>
           </div>
         </div>
       </div>
     </div>
    <p>
- <a href="https://github.com/whvtitiz/Weather-App-Project">Open-source code</a> by Whitney Wiles </p>
+ <a href="https://github.com/whvtitiz/Weather-App-Project">Open-source code</a> by Whitney Wiles ✌️ </p>
+ <p>Code Last Updated June 6, 2022</p>
  </div>
 </div>
  <script src="src/index.js"></script>
